Cleanup after submitting project to professor.

--- a/docs/final-report/latex/COP5520-project-report.tex
+++ b/docs/final-report/latex/COP5520-project-report.tex
@@ -15,7 +15,7 @@
 \hfuzz2pt % Don't report over-full h-boxes if over-edge is small
 \begin{document}
 
-\title{COP5520\\{\bf Project Report}}%
+\title{COP5522\\{\bf Project Report}}%
 \author{Dae Hyun Sung and Farooq Mahmud}%
 \date{}
 
@@ -34,6 +34,8 @@ All experiments were performed on the Ubuntu 20.04 operating system equipped wit
 The algorithm exepects input sizes that are powers of two. There are solutions involving non-powers of two, but those complicate the code without providing any additional insight into the performance~\cite{cormen}. In the parallel case, the number of threads must be powers of two. This assumption simplifies the code.
 
 Appendix \ref{appendix:codefiles} lists the structure of the code files for the three implementations. Instructions for building the three executables are in Appendix \ref{appendix:building}. Instructions for running the three executables are in Appendix \ref{appendix:running}.
+
+The video demonstration for this project can be viewed at https://youtu.be/iUrCV7SN1nw.
 
 
 \section{Testing Methodology}
